[gd_scene load_steps=17 format=3 uid="uid://cp270tkjlc8pp"]

[ext_resource type="Script" path="res://Scenes/UIScenes/PackScreen.gd" id="1_imxdv"]
[ext_resource type="Texture2D" path="res://Assets/UI/Buttons/PackAPunch.png" id="2_0g2ws"]
[ext_resource type="Texture2D" uid="uid://crk2urp2qpu3f" path="res://Assets/UI/HPbar.jpg" id="3_fg10y"]
[ext_resource type="Texture2D" path="res://Assets/Towers/Cross-1.png" id="4_o63h3"]
[ext_resource type="Texture2D" path="res://Assets/Towers/Gun.png" id="5_5oj5h"]
[ext_resource type="FontFile" path="res://Assets/Fonts/EraserDust.ttf" id="6_e1lth"]
[ext_resource type="Texture2D" path="res://Assets/UI/Art/back.png" id="7_8yu5u"]
[ext_resource type="Texture2D" path="res://Assets/UI/Art/Check.png" id="8_jrjo1"]
[ext_resource type="Texture2D" path="res://Assets/UI/Art/x.png" id="9_5f7hc"]

[sub_resource type="LabelSettings" id="LabelSettings_6vf3y"]
font = ExtResource("6_e1lth")
font_size = 40
font_color = Color(0.862745, 0.972549, 0.862745, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.239216)
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_gmwu5"]
font = ExtResource("6_e1lth")
font_size = 40
font_color = Color(0.690196, 0.00784314, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_g6wcp"]
font = ExtResource("6_e1lth")
font_size = 40
font_color = Color(0.172549, 0.419608, 0.176471, 1)

[sub_resource type="Animation" id="Animation_jlev4"]
resource_name = "current_gun"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Current:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_d1ll8"]
resource_name = "packed_gun"

[sub_resource type="Animation" id="Animation_qt7j1"]
resource_name = "upgrade_guns"
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Current:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(125, 25), Vector2(125, 25), Vector2(125, 50), Vector2(125, 25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Packed:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(855, 25), Vector2(855, 50), Vector2(855, 25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5sc1f"]
_data = {
"current_gun": SubResource("Animation_jlev4"),
"packed_gun": SubResource("Animation_d1ll8"),
"upgrade_guns": SubResource("Animation_qt7j1")
}

[node name="PackScreen" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_imxdv")

[node name="PackAPunch" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PackMachine" type="TextureRect" parent="PackAPunch"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_right = 192.0
offset_bottom = 384.0
grow_horizontal = 2
texture = ExtResource("2_0g2ws")

[node name="GunsB" type="TextureRect" parent="PackAPunch"]
self_modulate = Color(0, 0, 0, 0.682353)
custom_minimum_size = Vector2(1080, 300)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -540.0
offset_top = -360.0
offset_right = 540.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_fg10y")

[node name="Guns" type="HBoxContainer" parent="PackAPunch/GunsB"]
custom_minimum_size = Vector2(1000, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -150.0
offset_right = 500.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="CrossBow" type="TextureButton" parent="PackAPunch/GunsB/Guns" groups=["pack_buttons"]]
visible = false
custom_minimum_size = Vector2(200, 250)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("4_o63h3")
ignore_texture_size = true
stretch_mode = 0

[node name="Gun" type="TextureButton" parent="PackAPunch/GunsB/Guns" groups=["pack_buttons"]]
visible = false
custom_minimum_size = Vector2(200, 250)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("5_5oj5h")
ignore_texture_size = true
stretch_mode = 0

[node name="Stats" type="HBoxContainer" parent="PackAPunch/GunsB/Guns"]
custom_minimum_size = Vector2(1070, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Stats" type="VBoxContainer" parent="PackAPunch/GunsB/Guns/Stats"]
custom_minimum_size = Vector2(675, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="GunNames" type="HBoxContainer" parent="PackAPunch/GunsB/Guns/Stats/Stats"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Guns" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/GunNames"]
layout_mode = 2
size_flags_horizontal = 3
text = "Guns"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="OldGun" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/GunNames"]
layout_mode = 2
text = "Old"
label_settings = SubResource("LabelSettings_gmwu5")

[node name="Arrow" type="TextureRect" parent="PackAPunch/GunsB/Guns/Stats/Stats/GunNames"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="-" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/GunNames/Arrow"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 47.0
grow_horizontal = 2
size_flags_horizontal = 8
text = "-"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="PackCost2" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/GunNames/Arrow"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 38.5
offset_right = 40.0
offset_bottom = 38.5
grow_vertical = 2
rotation = -1.5708
text = "v"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="NewGun" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/GunNames"]
layout_mode = 2
text = "New"
label_settings = SubResource("LabelSettings_g6wcp")

[node name="TextureRect" type="TextureRect" parent="PackAPunch/GunsB/Guns/Stats/Stats"]
modulate = Color(0.0313726, 0, 0, 0.360784)
custom_minimum_size = Vector2(200, 5)
layout_mode = 2
texture = ExtResource("3_fg10y")
expand_mode = 1

[node name="damage" type="HBoxContainer" parent="PackAPunch/GunsB/Guns/Stats/Stats"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Damage" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/damage"]
layout_mode = 2
size_flags_horizontal = 3
text = "Damage"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="OldGun" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/damage"]
layout_mode = 2
size_flags_horizontal = 0
text = "Old"
label_settings = SubResource("LabelSettings_gmwu5")

[node name="Arrow" type="TextureRect" parent="PackAPunch/GunsB/Guns/Stats/Stats/damage"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="-" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/damage/Arrow"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 47.0
grow_horizontal = 2
size_flags_horizontal = 8
text = "-"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="PackCost2" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/damage/Arrow"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 38.5
offset_right = 40.0
offset_bottom = 38.5
grow_vertical = 2
rotation = -1.5708
text = "v"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="NewGun" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/damage"]
layout_mode = 2
size_flags_horizontal = 0
text = "New"
label_settings = SubResource("LabelSettings_g6wcp")

[node name="TextureRect2" type="TextureRect" parent="PackAPunch/GunsB/Guns/Stats/Stats"]
modulate = Color(0.0313726, 0, 0, 0.360784)
custom_minimum_size = Vector2(200, 5)
layout_mode = 2
texture = ExtResource("3_fg10y")
expand_mode = 1

[node name="cost" type="HBoxContainer" parent="PackAPunch/GunsB/Guns/Stats/Stats"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Damage" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/cost"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cost"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="OldGun" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/cost"]
layout_mode = 2
size_flags_horizontal = 0
text = "Old"
label_settings = SubResource("LabelSettings_gmwu5")

[node name="Arrow" type="TextureRect" parent="PackAPunch/GunsB/Guns/Stats/Stats/cost"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="-" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/cost/Arrow"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 47.0
grow_horizontal = 2
size_flags_horizontal = 8
text = "-"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="PackCost2" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/cost/Arrow"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 38.5
offset_right = 40.0
offset_bottom = 38.5
grow_vertical = 2
rotation = -1.5708
text = "v"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="NewGun" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/cost"]
layout_mode = 2
size_flags_horizontal = 0
text = "New"
label_settings = SubResource("LabelSettings_g6wcp")

[node name="TextureRect3" type="TextureRect" parent="PackAPunch/GunsB/Guns/Stats/Stats"]
modulate = Color(0.0313726, 0, 0, 0.360784)
custom_minimum_size = Vector2(200, 5)
layout_mode = 2
texture = ExtResource("3_fg10y")
expand_mode = 1

[node name="range" type="HBoxContainer" parent="PackAPunch/GunsB/Guns/Stats/Stats"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Damage" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/range"]
layout_mode = 2
size_flags_horizontal = 3
text = "Range"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="OldGun" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/range"]
layout_mode = 2
size_flags_horizontal = 0
text = "Old"
label_settings = SubResource("LabelSettings_gmwu5")

[node name="Arrow" type="TextureRect" parent="PackAPunch/GunsB/Guns/Stats/Stats/range"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="-" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/range/Arrow"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 43.0
grow_horizontal = 2
size_flags_horizontal = 8
text = "-"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="PackCost2" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/range/Arrow"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 38.5
offset_right = 40.0
offset_bottom = 38.5
grow_vertical = 2
rotation = -1.5708
text = "v"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="NewGun" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/range"]
layout_mode = 2
size_flags_horizontal = 0
text = "New"
label_settings = SubResource("LabelSettings_g6wcp")

[node name="TextureRect4" type="TextureRect" parent="PackAPunch/GunsB/Guns/Stats/Stats"]
modulate = Color(0.0313726, 0, 0, 0.360784)
custom_minimum_size = Vector2(200, 5)
layout_mode = 2
texture = ExtResource("3_fg10y")
expand_mode = 1

[node name="rof" type="HBoxContainer" parent="PackAPunch/GunsB/Guns/Stats/Stats"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Fire_Rate" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/rof"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rate of
Fire"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="OldGun" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/rof"]
layout_mode = 2
size_flags_horizontal = 0
text = "Old"
label_settings = SubResource("LabelSettings_gmwu5")

[node name="Arrow" type="TextureRect" parent="PackAPunch/GunsB/Guns/Stats/Stats/rof"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="-" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/rof/Arrow"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -21.5
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
text = "-"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="PackCost2" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/rof/Arrow"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 15.0
offset_top = 15.0
offset_right = -10.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
text = "v"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="NewGun" type="Label" parent="PackAPunch/GunsB/Guns/Stats/Stats/rof"]
layout_mode = 2
size_flags_horizontal = 0
text = "New"
label_settings = SubResource("LabelSettings_g6wcp")

[node name="UIButtons" type="VBoxContainer" parent="PackAPunch/GunsB/Guns/Stats"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8

[node name="Back" type="TextureButton" parent="PackAPunch/GunsB/Guns/Stats/UIButtons"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 2
texture_normal = ExtResource("7_8yu5u")
stretch_mode = 0

[node name="CTP" type="Label" parent="PackAPunch/GunsB/Guns/Stats/UIButtons"]
layout_mode = 2
size_flags_horizontal = 4
text = "Cost to PacK"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="pack_cost" type="HBoxContainer" parent="PackAPunch/GunsB/Guns/Stats/UIButtons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="CostTxt" type="Label" parent="PackAPunch/GunsB/Guns/Stats/UIButtons/pack_cost"]
layout_mode = 2
theme_override_font_sizes/font_size = 95
text = "$"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="Cost" type="Label" parent="PackAPunch/GunsB/Guns/Stats/UIButtons/pack_cost"]
layout_mode = 2
text = "00"
label_settings = SubResource("LabelSettings_6vf3y")

[node name="Verfy" type="TextureButton" parent="PackAPunch/GunsB/Guns/Stats/UIButtons"]
custom_minimum_size = Vector2(70, 90)
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("8_jrjo1")
stretch_mode = 0

[node name="Exit" type="TextureButton" parent="PackAPunch/GunsB"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -57.0
offset_top = -2.0
offset_right = 3.0
offset_bottom = 58.0
grow_horizontal = 0
size_flags_horizontal = 10
size_flags_vertical = 2
texture_normal = ExtResource("9_5f7hc")
ignore_texture_size = true
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="PackAPunch"]
libraries = {
"": SubResource("AnimationLibrary_5sc1f")
}

[node name="Current" type="TextureRect" parent="PackAPunch"]
visible = false
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
offset_left = 125.0
offset_top = 25.0
offset_right = 425.0
offset_bottom = 325.0
expand_mode = 1

[node name="Packed" type="TextureRect" parent="PackAPunch"]
visible = false
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -425.0
offset_top = 25.0
offset_right = -125.0
offset_bottom = 325.0
grow_horizontal = 0
expand_mode = 1

[connection signal="pressed" from="PackAPunch/GunsB/Guns/CrossBow" to="." method="_on_cross_bow_pressed"]
[connection signal="pressed" from="PackAPunch/GunsB/Guns/Gun" to="." method="_on_gun_pressed"]
[connection signal="pressed" from="PackAPunch/GunsB/Guns/Stats/UIButtons/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="PackAPunch/GunsB/Guns/Stats/UIButtons/Verfy" to="." method="_on_verfy_pressed"]
[connection signal="pressed" from="PackAPunch/GunsB/Exit" to="." method="_on_exit_pressed"]
